<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0DFFF"
    tools:context=".audioplayer.music.paywall.PaywallUnlockFeatureActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebasneue_regular"
        android:text="@string/unlock_title"
        android:textColor="#0E111B"
        android:textSize="@dimen/_38sdp"
        app:layout_constraintLeft_toLeftOf="@id/imgBackground"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:srcCompat="@drawable/img_pallwall_unlock_feature" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/readexpro_regular"
        android:gravity="center"
        android:text="@string/unlock_price_description"
        android:textColor="#0E111B"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintLeft_toLeftOf="@id/imgBackground"
        app:layout_constraintRight_toRightOf="@id/imgBackground"
        app:layout_constraintTop_toBottomOf="@id/imgBackground" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTryFree"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_button_try_to_free2"
        android:fontFamily="@font/funnelsans_extrabold"
        android:text="Try for free"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDescription" />

    <ProgressBar
        android:id="@+id/pbTryToFree"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_23sdp"
        android:layout_height="@dimen/_23sdp"
        android:indeterminateTint="#9F9F9F"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnTryFree"
        app:layout_constraintEnd_toEndOf="@+id/btnTryFree"
        app:layout_constraintStart_toStartOf="@+id/btnTryFree"
        app:layout_constraintTop_toTopOf="@+id/btnTryFree" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPolicy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/readexpro_regular"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/policyOnBoarding"
        android:textColor="#4D5A68"
        android:textSize="@dimen/_7sdp"
        app:layout_constraintEnd_toEndOf="@id/btnTryFree"
        app:layout_constraintStart_toStartOf="@id/btnTryFree"
        app:layout_constraintTop_toBottomOf="@id/btnTryFree" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />
</androidx.constraintlayout.widget.ConstraintLayout>